[package]

name = "log"
version = "0.4.2" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/log"
documentation = "https://docs.rs/log"
homepage = "https://github.com/rust-lang/log"
description = """
A lightweight logging facade for Rust
"""
categories = ["development-tools::debugging"]
keywords = ["logging"]

[package.metadata.docs.rs]
features = ["std", "serde"]

[[test]]
name = "filters"
harness = false

[features]
max_level_off   = []
max_level_error = []
max_level_warn  = []
max_level_info  = []
max_level_debug = []
max_level_trace = []

release_max_level_off   = []
release_max_level_error = []
release_max_level_warn  = []
release_max_level_info  = []
release_max_level_debug = []
release_max_level_trace = []

std = []

# Support structured values using `sval`
kv_sval = ["sval"]

# Support structured values using `serde`
kv_serde = ["std","serde","erased-serde","sval/serde"]

[badges]
travis-ci = { repository = "rust-lang-nursery/log" }
appveyor = { repository = "alexcrichton/log" }

[dependencies]
cfg-if = "0.1.2"

sval = { version = "0.1", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
erased-serde = { version = "0.3.6", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
